Fixed unread mark on mobile view
Closes #1592

--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -1006,7 +1006,7 @@ a.im_message_author_via {
     vertical-align: text-top;
     margin-right: 2px;
     opacity: 1;
-    margin-top: 6px;
+    margin-top: 1px;
     background: none;
   }
 }
